Extract Routes.jsx out of App.jsx. Change / remove some styling in an attempt to fix layout issues (header & footer not staying on the screen).

--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -1,4 +1,4 @@
-html {overflow-y: auto;}
+html {overflow-y: hidden;}
 
 #level {
     position: fixed;
